<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_message_type"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/spinner_message_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="#E7E3E3"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_status"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="#E7E3E3"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_current_coordinates"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/current_coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="41°24'12.2''N 2°10'26.5''E"
            android:textSize="22sp"
            android:textColor="#4CAF50"
            android:fontFamily="sans-serif-black"
            android:layout_marginBottom="20dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_frequency"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/frequency_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_minutes"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp" />

        <SeekBar
            android:id="@+id/seekbar_frequency"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="1"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/text_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_frequency"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/button_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#023047"
            android:textColor="#ffffff"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
