<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Connection Status -->
    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#023047"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/connected_to_device"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/chatButton"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#8ECAE6"
            android:padding="12dp"
            android:text="@string/chat"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/devicesButton"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#219EBC"
            android:padding="12dp"
            android:text="@string/devices"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/sendSignalButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#023047"
        android:padding="12dp"
        android:text="@string/send_signals"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <!-- SOS Button -->
    <Button
        android:id="@+id/sosButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="#C81111"
        android:padding="20dp"
        android:text="@string/sos"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />


</LinearLayout>
</LinearLayout>
